--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/incomplete-test-creation-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/incomplete-test-creation-dialog.html
@@ -1,17 +1,17 @@
 ﻿<div class="dialog">
     <div class="dialog-title clearfix">
-        <h1 class="pull-left" md-dialog-title></h1>
+        <h1 class="pull-left" md-dialog-title>Alert Message</h1>
         <button type="button" class="pull-right" md-dialog-close><em class="material-icons">close</em></button>
     </div>
     <md-dialog-content>
         <div class="mb20">
-            <span *ngIf="isQuestionMissing">No questions have been selected for this test. Please add questions to the test. Click
-                <a [routerLink]="['/tests',testId,'questions']" (click)="closeDialog()">Select Questions</a></span>
-            <span *ngIf="!isQuestionMissing">No sections have been selected for this test. Please add sections to the test. Click 
-                <a [routerLink]="['/tests', testId,'sections']" (click)="closeDialog()">Select Sections</a> </span>
+            <h4 *ngIf="isQuestionMissing">No questions have been selected for this test. Please add questions to the test. Click
+                <a class="theme-text" [routerLink]="['/tests',testId,'questions']" (click)="closeDialog()">Select Questions</a></h4>
+            <h4 *ngIf="!isQuestionMissing">No sections have been selected for this test. Please add sections to the test. Click 
+                <a class="theme-text" [routerLink]="['/tests', testId,'sections']" (click)="closeDialog()">Select Sections</a> </h4>
         </div>
     </md-dialog-content>
     <md-dialog-actions>
-        <button type="button" class="btn" md-dialog-close>Ok</button>        
+        <button type="button" class="btn btn-primary" md-dialog-close>Ok</button>        
     </md-dialog-actions>
 </div>
