--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
@@ -1,37 +1,35 @@
 ﻿<div class="test-create-header clearfix">
-  <div class="container">
-    <h1 class="pull-left">
-      <span [hidden]="!isLabelVisible">
-        <span class="test-name">{{testDetails.testName}}</span>
-        <button type="button" class="icon-btn ml10" (click)="hideEditButton()"><em class="material-icons">edit</em></button>
-      </span>
-      <span [hidden]="isLabelVisible">
-        <input type="text" id="name" #box name="name" class="form-control" placeholder="Ex. Software Developer Recruitment Test" (keyup)="changeErrorMessage()"
-               [(ngModel)]="testDetails.testName" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&_*^{}[\]\|.?-]*$" maxlength="150" (focus)="selectAllContent($event)"
-               (click)="$event.preventDefault()" (keyup.enter)="onEnter(box.value)" />
-        <span class="update-btns">
-          <button type="submit" class="icon-btn ml10" (click)="updateTestName(testDetails.id,testDetails)" [disabled]="name.invalid || isTestNameExist"><em class="material-icons theme-text">check</em></button>
-          <button type="button" class="icon-btn ml10" (click)="showEditButton(box.value)"><em class="material-icons danger-text">close</em></button>
-        </span>
-        <span class="errors-container">
-          <span class="error-msg" *ngIf="isWhiteSpaceError || (name.dirty && !name.valid && name.errors.required)">Name is required</span>
-          <span class="error-msg" *ngIf="name.dirty && !name.valid && name.errors.pattern">Test name should be alphanumeric. Allowed special symbols are @, _ and white space</span>
-          <span class="error-msg" *ngIf="isTestNameExist">Test with this name already exists</span>
-        </span>
-      </span>
-    </h1>
-    <div class="pull-right">
-        <div>
-                    <popover-content #myPopover
-                                     [closeOnClickOutside]="true">
-                        <label>Test Link</label>
-                        <div class="url-container">
-                            <input type="text" class="form-control" [(ngModel)]="testLink" name="link" id="link" #link />
-                            <em class="material-icons" ngxClipboard [cbContent]="testLink" (cbOnSuccess)="copiedContent = true" mdTooltip={{tooltipMessage}} (click)="showTooltipMessage($event,link)" (mouseenter)="changeTooltipMessage()">content_copy</em>
-                        </div>
-                    </popover-content>
-                    <button type="button" class="btn" [popover]="myPopover" (click)="getTestLink()"><em class="material-icons">link</em>Get Test Link</button>
-                    <button type="button" class="btn btn-primary pull-right"><em class="material-icons">remove_red_eye</em> Preview</button>
+    <div class="container">
+        <h1 class="pull-left">
+            <span [hidden]="!isLabelVisible">
+                <span class="test-name">{{testDetails.testName}}</span>
+                <button type="button" class="icon-btn ml10" (click)="hideEditButton()"><em class="material-icons">edit</em></button>
+            </span>
+            <span [hidden]="isLabelVisible">
+                <input type="text" id="name" #box name="name" class="form-control" placeholder="Ex. Software Developer Recruitment Test" (keyup)="changeErrorMessage()"
+                       [(ngModel)]="testDetails.testName" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&_*^{}[\]\|.?-]*$" maxlength="150" (focus)="selectAllContent($event)"
+                       (click)="$event.preventDefault()" (keyup.enter)="onEnter(box.value)" />
+                <span class="update-btns">
+                    <button type="submit" class="icon-btn ml10" (click)="updateTestName(testDetails.id,testDetails)" [disabled]="name.invalid || isTestNameExist"><em class="material-icons theme-text">check</em></button>
+                    <button type="button" class="icon-btn ml10" (click)="showEditButton(box.value)"><em class="material-icons danger-text">close</em></button>
+                </span>
+                <span class="errors-container">
+                    <span class="error-msg" *ngIf="isWhiteSpaceError || (name.dirty && !name.valid && name.errors.required)">Name is required</span>
+                    <span class="error-msg" *ngIf="name.dirty && !name.valid && name.errors.pattern">Test name should be alphanumeric. Allowed special symbols are @, _ and white space</span>
+                    <span class="error-msg" *ngIf="isTestNameExist">Test with this name already exists</span>
+                </span>
+            </span>
+        </h1>
+        <div class="pull-right">
+            <button type="button" class="btn" [popover]="myPopover" (click)="getTestLink()"><em class="material-icons">link</em>Get Test Link</button>
+            <button type="button" class="btn btn-primary pull-right"><em class="material-icons">remove_red_eye</em> Preview</button>
+            <popover-content #myPopover [closeOnClickOutside]="true">
+                <label>Test Link</label>
+                <div class="url-container">
+                    <input type="text" class="form-control" [(ngModel)]="testLink" name="link" id="link" #link />
+                    <em class="material-icons" ngxClipboard [cbContent]="testLink" (cbOnSuccess)="copiedContent = true" mdTooltip={{tooltipMessage}} (click)="showTooltipMessage($event,link)" (mouseenter)="changeTooltipMessage()">content_copy</em>
                 </div>
-            </div>
+            </popover-content>
         </div>
+    </div>
+</div>
