--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-view/test-view.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-view/test-view.html
@@ -18,64 +18,61 @@
                     <button md-menu-item [disabled]="!isEditTestEnabled" (click)="editTest(testDetails)">Edit</button>
                     <a md-menu-item (click)="deleteTestDialog(testDetails)">Delete</a>
                     <a md-menu-item (click)="duplicateTestDialog(testDetails)">Duplicate</a>
-                    <a md-menu-item (click)="navigateToTestSettings()"  [disabled]="!isEditTestEnabled">Settings</a>
+                    <a md-menu-item (click)="navigateToTestSettings()" [disabled]="!isEditTestEnabled">Settings</a>
                 </md-menu>
                 <button type="button" class="btn" [popover]="myPopover"><em class="material-icons">link</em>Get Test Link</button>
                 <button type="button" class="btn btn-primary pull-right"><em class="material-icons">remove_red_eye</em> Preview</button>
             </div>
-            <div>
-                <popover-content #myPopover
-                                 [closeOnClickOutside]="true">
-                    <label>Test Link</label>
-                    <div class="url-container">
-                        <input type="text" class="form-control" [(ngModel)]="testLink" name="link" id="link" #link />
-                        <em class="material-icons" ngxClipboard [cbContent]="testLink" (cbOnSuccess)="copiedContent = true" mdTooltip={{tooltipMessage}} (click)="showTooltipMessage($event,link)" (mouseenter)="changeTooltipMessage()">content_copy</em>
-                    </div>
-                </popover-content>
-            </div>
-        </div>
-        <div class="container">
-            <div class="clearfix">
-                <h5 class="pull-left">Test Duration: {{testDetails.duration}} mins</h5>
-                <a class="pull-right back-link" [routerLink]="['/tests']">< back to home</a>
-            </div>
-            <h5 class="mt20 mb20" *ngIf="!isCategorySelected">No Sections/Questions have been selected yet. To do so, please click <a class="theme-text" [routerLink]="['/tests',testDetails.id,'sections']">here</a>.</h5>
-            <ng-container *ngFor="let category of testDetails.categoryAcList;let k=index">
-                <md2-accordion class="questions-selection" *ngIf="category.isSelect">
-                    <md2-accordion-tab class="collapsible-block" [disabled]="category.isQuestionAbsent">
-                        <md2-accordion-header class="collapsible-header clearfix" *ngIf="category.isSelect" [class.active]="category.isAccordionOpen" (click)="getAllquestions(category,k)">
-                            <div class="title-info h2 pull-left">
-                                <span>{{category.categoryName}}</span>
-                            </div>
-                            <div class="pull-right">
-                                <span class="h7 qs-selected">{{category.numberOfSelectedQuestion}} question(s)</span>
-                                <span class="collapsible-icon" *ngIf="!category.isQuestionAbsent"><em class="material-icons add-icon">add</em><em class="material-icons remove-icon">remove</em></span>
-                            </div>
-                        </md2-accordion-header>
-
-            <div class="collapsible-body p0">
-                <div class="qs-container" *ngFor="let question of category.questionList;let i=index">
-                    <p class="qs-num">Q.{{i+1}}</p>
-                    <div class="qs-text">
-                        <p class="question" [innerHtml]="question.question.questionDetail"></p>
-                        <div *ngFor="let option of question.singleMultipleAnswerQuestion?.singleMultipleAnswerQuestionOption; let j = index">
-                            <p *ngIf="questionType[question.questionType] != questionType[2]" [ngClass]="isCorrectAnswer(option.isAnswer)" class="ans-option"><span>{{optionName[j]}}</span> <span>{{option.option}}</span></p>
-                        </div>
-                        <div class="mt10">
-                            <p class="tags">{{category.categoryName}}</p>
-                            <p class="tags">{{difficultyLevel[question.question.difficultyLevel]}}</p>
-                        </div>
-                      </div>
+            <popover-content #myPopover [closeOnClickOutside]="true">
+                <label>Test Link</label>
+                <div class="url-container">
+                    <input type="text" class="form-control" [(ngModel)]="testLink" name="link" id="link" #link />
+                    <em class="material-icons" ngxClipboard [cbContent]="testLink" (cbOnSuccess)="copiedContent = true" mdTooltip={{tooltipMessage}} (click)="showTooltipMessage($event,link)" (mouseenter)="changeTooltipMessage()">content_copy</em>
                 </div>
-            </div>
+            </popover-content>
+        </div>
+    </div>
+    <div class="container">
+        <div class="clearfix">
+            <h5 class="pull-left">Test Duration: {{testDetails.duration}} mins</h5>
+            <a class="pull-right back-link" [routerLink]="['/tests']">< back to home</a>
+        </div>
+        <h5 class="mt20 mb20" *ngIf="!isCategorySelected">No Sections/Questions have been selected yet. To do so, please click <a class="theme-text" [routerLink]="['/tests',testDetails.id,'sections']">here</a>.</h5>
+        <ng-container *ngFor="let category of testDetails.categoryAcList;let k=index">
+            <md2-accordion class="questions-selection" *ngIf="category.isSelect">
+                <md2-accordion-tab class="collapsible-block" [disabled]="category.isQuestionAbsent">
+                    <md2-accordion-header class="collapsible-header clearfix" *ngIf="category.isSelect" [class.active]="category.isAccordionOpen" (click)="getAllquestions(category,k)">
+                        <div class="title-info h2 pull-left">
+                            <span>{{category.categoryName}}</span>
+                        </div>
+                        <div class="pull-right">
+                            <span class="h7 qs-selected">{{category.numberOfSelectedQuestion}} question(s)</span>
+                            <span class="collapsible-icon" *ngIf="!category.isQuestionAbsent"><em class="material-icons add-icon">add</em><em class="material-icons remove-icon">remove</em></span>
+                        </div>
+                    </md2-accordion-header>
 
-                    </md2-accordion-tab>
-                </md2-accordion>
-            </ng-container>
-            <div class="bottom-info">
-                <span>{{testDetails.numberOfTestAttendees}} Candidates</span>
-                <button type="button" class="btn btn-primary" [routerLink]="['/reports/test',testDetails.id]">View Report</button>
-            </div>
+                    <div class="collapsible-body p0">
+                        <div class="qs-container" *ngFor="let question of category.questionList;let i=index">
+                            <p class="qs-num">Q.{{i+1}}</p>
+                            <div class="qs-text">
+                                <p class="question" [innerHtml]="question.question.questionDetail"></p>
+                                <div *ngFor="let option of question.singleMultipleAnswerQuestion?.singleMultipleAnswerQuestionOption; let j = index">
+                                    <p *ngIf="questionType[question.questionType] != questionType[2]" [ngClass]="isCorrectAnswer(option.isAnswer)" class="ans-option"><span>{{optionName[j]}}</span> <span>{{option.option}}</span></p>
+                                </div>
+                                <div class="mt10">
+                                    <p class="tags">{{category.categoryName}}</p>
+                                    <p class="tags">{{difficultyLevel[question.question.difficultyLevel]}}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </md2-accordion-tab>
+            </md2-accordion>
+        </ng-container>
+        <div class="bottom-info">
+            <span>{{testDetails.numberOfTestAttendees}} Candidates</span>
+            <button type="button" class="btn btn-primary" [routerLink]="['/reports/test',testDetails.id]">View Report</button>
         </div>
     </div>
 </div>
