Removed print functionality.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/individual-report/individual-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/individual-report/individual-report.html
@@ -10,7 +10,7 @@
             </h1>
             <div class="pull-right">
                 <button type="button" class="btn"><em class="material-icons">file_download</em> Download</button>
-                <button type="button" class="btn"><em class="material-icons" (click)="printIndividualReport()">print</em> Print</button>
+                <button type="button" class="btn"><em class="material-icons">print</em> Print</button>
             </div>
         </div>
     </div>
